crates/tests/other-db-tests/src/citus/snapshots/other_db_tests__citus__query_tests__predicates__select_where_album_id_less_than_or_equal_to.snap
---
source: crates/tests/other-db-tests/src/citus/query_tests.rs
expression: result
---
[
  {
    "rows": [
      {
        "AlbumId": 1,
        "Title": "For Those About To Rock We Salute You"
      }
    ]
  }
]
